--- a/MUTAG_GraphSAGE.ipynb
+++ b/MUTAG_GraphSAGE.ipynb
@@ -166,11 +166,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "example = mutag[0]\n",
-        "y = example.x.shape  #([number of nodes, num_node_features])\n",
-        "print(y[0], y[1])"
-      ],
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -185,42 +181,6 @@
           "name": "stdout",
           "text": [
             "17 7\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Checking if all labels exist"
-      ],
-      "metadata": {
-        "id": "dogHd-AQPf_1"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "for i in range(len(mutag)):\n",
-        "  x = mutag[i]\n",
-        "  if x.y.size(0) == 0:\n",
-        "    print(x)\n",
-        "\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "yIUwt7CAO8yg",
-        "outputId": "287a4e42-42e4-4998-ce92-52c77a219a23"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Negative\n"
           ]
         }
       ]
@@ -254,6 +214,34 @@
         "print(\"num_classes:\", mutag.num_classes)\n",
         "print(\"num_node_features:\", mutag.num_node_features)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "example = mutag[0]\n",
+        "y = example.x.shape  #([number of nodes, num_node_features])\n",
+        "print(y[0], y[1])"
+      ],
+      "metadata": {
+        "id": "NjSNnJgiM4OZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(len(mutag)):\n",
+        "  x = mutag[i]\n",
+        "  if x.y.size(0) == 0:\n",
+        "    print(x)\n",
+        "# to check if all labels exist"
+      ],
+      "metadata": {
+        "id": "DG6CftaiM4qP"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -894,7 +882,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "lv_TrHuvREgT"
       },
@@ -919,7 +907,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "21dRhxL5REd4"
       },
@@ -937,7 +925,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "Cy_6N8uMREa9"
       },
@@ -951,7 +939,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "dW7klDEkREYX"
       },
@@ -1128,12 +1116,12 @@
       "metadata": {
         "id": "NVhFosutZsSI"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "id": "Mvb04S0BRETN",
         "colab": {
@@ -1204,7 +1192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "id": "XrzFYIT9REPq"
       },
@@ -1248,7 +1236,7 @@
         "id": "wMlOSqsrrDW1",
         "outputId": "4063613e-57c7-4d14-8025-5687ff5d2970"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1320,7 +1308,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4UI64zeDw46zEOzhGo1/M",
+      "authorship_tag": "ABX9TyNjui51wOgEPrTdx93YWGG8",
       "include_colab_link": true
     },
     "kernelspec": {
