--- a/GNN_local_bridges.ipynb
+++ b/GNN_local_bridges.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMGjpZqP0WstWPeKz8XUVlr",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/AmazingK2k3/Over_Squashing_GNNs/blob/main/GNN_local_bridges.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -38,8 +22,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Graph Information:\n",
             "Number of nodes: 10\n",
@@ -188,6 +172,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UBYJdyGgp6dp",
+        "outputId": "02c38cbd-cf9d-4107-a3f8-30c8b573aa8d"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Local bridges found: [(1, 0), (1, 2), (1, 8), (0, 2), (0, 3), (0, 9), (2, 4), (3, 4), (3, 8), (4, 5), (4, 6), (4, 9), (5, 7), (6, 7)]\n"
+          ]
+        }
+      ],
       "source": [
         "import networkx as nx\n",
         "import numpy as np\n",
@@ -312,33 +313,32 @@
         "if __name__ == \"__main__\":\n",
         "    bridges = test_local_bridges()\n",
         "    print(\"Local bridges found:\", bridges)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "UBYJdyGgp6dp",
-        "outputId": "02c38cbd-cf9d-4107-a3f8-30c8b573aa8d"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Local bridges found: [(1, 0), (1, 2), (1, 8), (0, 2), (0, 3), (0, 9), (2, 4), (3, 4), (3, 8), (4, 5), (4, 6), (4, 9), (5, 7), (6, 7)]\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "wgB_V3vcrtmc"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMGjpZqP0WstWPeKz8XUVlr",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
