--- a/GraphSAGE.ipynb
+++ b/GraphSAGE.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -27,15 +13,20 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "CPvLjfW0T0N5"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ZpH109sMUEwZ"
+      },
+      "outputs": [],
       "source": [
         "list(data)\n",
         "train_size = int(0.8 * len(data))\n",
@@ -44,38 +35,38 @@
         "train_data = data[:train_size]\n",
         "val_data = data[train_size:train_size + val_size]\n",
         "test_data = data[train_size + val_size:]"
-      ],
-      "metadata": {
-        "id": "ZpH109sMUEwZ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(f\"Train_size, Test_Size, Val_size: {train_size}, {test_size}, {val_size}\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "aC42kuKRUEto"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(f\"Train_size, Test_Size, Val_size: {train_size}, {test_size}, {val_size}\")"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "device = torch.device('cuda ' if torch.cuda.is_available() else 'cpu')\n",
-        "print(device)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "rRiIwB50UHJ7"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "device = torch.device('cuda ' if torch.cuda.is_available() else 'cpu')\n",
+        "print(device)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7qgn3sHnUHIP"
+      },
+      "outputs": [],
       "source": [
         "def loader(batch_size):\n",
         "  train_loader = DataLoader(train_data, batch_size = batch_size, shuffle = True)\n",
@@ -83,15 +74,15 @@
         "  test_loader = DataLoader(test_data, batch_size = 1 , shuffle = True)\n",
         "\n",
         "  return train_loader, val_loader, test_loader"
-      ],
-      "metadata": {
-        "id": "7qgn3sHnUHIP"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "gkvcIGbmUHGj"
+      },
+      "outputs": [],
       "source": [
         "# num_node_features is the number of node features.\n",
         "\n",
@@ -132,15 +123,15 @@
         "        x = self.lin(x)\n",
         "        return torch.softmax(x,dim=1)\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "gkvcIGbmUHGj"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "_wAw8eIlUHE6"
+      },
+      "outputs": [],
       "source": [
         "def loader(batch_size):\n",
         "  train_loader = DataLoader(train_data, batch_size = batch_size, shuffle = True)\n",
@@ -148,15 +139,15 @@
         "  test_loader = DataLoader(test_data, batch_size = 1 , shuffle = True)\n",
         "\n",
         "  return train_loader, val_loader, test_loader"
-      ],
-      "metadata": {
-        "id": "_wAw8eIlUHE6"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "YFp6ycsSUHDb"
+      },
+      "outputs": [],
       "source": [
         "def Roc_curve(labels, preds, model_name):\n",
         "  fpr, tpr, thresholds = roc_curve(labels, preds)\n",
@@ -165,29 +156,29 @@
         "  plt.title(f\"{model_name}\")\n",
         "  plt.xlim([0.0, 1.0])\n",
         "  plt.ylim([0.0, 1.05])"
-      ],
-      "metadata": {
-        "id": "YFp6ycsSUHDb"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "U5I_oXVJUHB5"
+      },
+      "outputs": [],
       "source": [
         "def save_classification_report_txt(report_str, model_name, file_path):\n",
         "    with open(file_path, 'w') as f:\n",
         "        f.write(f\"Classification Report for {model_name}:\\n\")\n",
         "        f.write(report_str)"
-      ],
-      "metadata": {
-        "id": "U5I_oXVJUHB5"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ye-N9S5GUHAC"
+      },
+      "outputs": [],
       "source": [
         "from sklearn.metrics import confusion_matrix, classification_report\n",
         "\n",
@@ -239,15 +230,15 @@
         "  conf = confusion_matrix(y_true = all_labels, y_pred = all_preds)\n",
         "  roc_curve = Roc_curve(all_labels, all_preds, model_name)\n",
         "  return Confusion_matrix(conf, model_name),print(clf_rp), roc_curve\n"
-      ],
-      "metadata": {
-        "id": "ye-N9S5GUHAC"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "l0GghSeWUG-D"
+      },
+      "outputs": [],
       "source": [
         "def train(model, loader, lr, epochs,i):\n",
         "  criterion = torch.nn.BCELoss()\n",
@@ -359,15 +350,15 @@
         "# Perform all three experiments with the learning rate set to 0.01\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "l0GghSeWUG-D"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "rNJXn-iaUPuL"
+      },
+      "outputs": [],
       "source": [
         "batch_size = 32\n",
         "train_loader, val_loader, test_loader = loader(batch_size = batch_size)\n",
@@ -379,39 +370,48 @@
         "\n",
         "print(f'Test Loss: {test_loss} | Test Acc: {test_acc}%')\n",
         "print(f'Training Accuracy: {train_acc}| Validation Accuracy: {val_acc}| Epoch: {epochs}')"
-      ],
-      "metadata": {
-        "id": "rNJXn-iaUPuL"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "QD7rYPedUPrh"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "Y9r7xCOtUPqR"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "R7pZ-MdxUPoP"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
