--- a/MUTAG_GraphSAGE.ipynb
+++ b/MUTAG_GraphSAGE.ipynb
@@ -1321,6 +1321,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Training Loop -1"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 60,
       "metadata": {
@@ -1631,7 +1638,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Better training Step implementation - modified"
+        "### Better training Step implementation - modified - Training 2"
       ]
     },
     {
