rewire1: connects all adjacent nodes of the bridge

--- a/MUTAG_GraphSAGE.ipynb
+++ b/MUTAG_GraphSAGE.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "kVs5uFUsQ9bM"
       },
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "nieekaNMRE10"
       },
@@ -156,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -200,8 +200,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Nodes and Node Feature size"
+      ],
+      "metadata": {
+        "id": "rj2ec41a6wUU"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "NjSNnJgiM4OZ",
         "outputId": "f9028462-bdd5-4f27-d8ac-0c2a9393b3d1",
@@ -226,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "DG6CftaiM4qP"
       },
@@ -241,143 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {
-        "id": "EjyFjgnMMpyL"
-      },
-      "outputs": [],
-      "source": [
-        "mutag?"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "4ZXLoJahqMss",
-        "outputId": "c34fa682-5b41-486a-b036-1fd22eb9fd3a"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "torch.Size([17, 7])\n",
-            "torch.Size([13, 7])\n",
-            "torch.Size([13, 7])\n",
-            "torch.Size([19, 7])\n",
-            "torch.Size([11, 7])\n",
-            "torch.Size([28, 7])\n",
-            "torch.Size([16, 7])\n",
-            "torch.Size([20, 7])\n",
-            "torch.Size([12, 7])\n",
-            "torch.Size([17, 7])\n",
-            "torch.Size([17, 7])\n",
-            "torch.Size([20, 7])\n",
-            "torch.Size([22, 7])\n",
-            "torch.Size([13, 7])\n",
-            "torch.Size([19, 7])\n",
-            "torch.Size([22, 7])\n",
-            "torch.Size([11, 7])\n",
-            "torch.Size([17, 7])\n",
-            "torch.Size([13, 7])\n",
-            "torch.Size([18, 7])\n",
-            "torch.Size([18, 7])\n",
-            "torch.Size([17, 7])\n",
-            "torch.Size([23, 7])\n",
-            "torch.Size([27, 7])\n",
-            "torch.Size([17, 7])\n",
-            "torch.Size([13, 7])\n",
-            "torch.Size([23, 7])\n",
-            "torch.Size([17, 7])\n",
-            "torch.Size([23, 7])\n",
-            "torch.Size([23, 7])\n",
-            "torch.Size([22, 7])\n",
-            "torch.Size([24, 7])\n",
-            "torch.Size([23, 7])\n",
-            "torch.Size([13, 7])\n",
-            "torch.Size([17, 7])\n",
-            "torch.Size([14, 7])\n",
-            "torch.Size([17, 7])\n",
-            "torch.Size([15, 7])\n",
-            "torch.Size([15, 7])\n",
-            "torch.Size([13, 7])\n",
-            "torch.Size([17, 7])\n",
-            "torch.Size([13, 7])\n",
-            "torch.Size([19, 7])\n",
-            "torch.Size([17, 7])\n",
-            "torch.Size([12, 7])\n",
-            "torch.Size([23, 7])\n",
-            "torch.Size([22, 7])\n",
-            "torch.Size([17, 7])\n",
-            "torch.Size([20, 7])\n",
-            "torch.Size([16, 7])\n",
-            "torch.Size([26, 7])\n",
-            "torch.Size([26, 7])\n",
-            "torch.Size([19, 7])\n",
-            "torch.Size([19, 7])\n",
-            "torch.Size([14, 7])\n",
-            "torch.Size([17, 7])\n",
-            "torch.Size([21, 7])\n",
-            "torch.Size([25, 7])\n",
-            "torch.Size([23, 7])\n",
-            "torch.Size([19, 7])\n",
-            "torch.Size([17, 7])\n",
-            "torch.Size([11, 7])\n",
-            "torch.Size([23, 7])\n",
-            "torch.Size([20, 7])\n",
-            "torch.Size([16, 7])\n",
-            "torch.Size([16, 7])\n",
-            "torch.Size([20, 7])\n",
-            "torch.Size([23, 7])\n",
-            "torch.Size([19, 7])\n",
-            "torch.Size([14, 7])\n",
-            "torch.Size([26, 7])\n",
-            "torch.Size([16, 7])\n",
-            "torch.Size([16, 7])\n",
-            "torch.Size([23, 7])\n",
-            "torch.Size([18, 7])\n",
-            "torch.Size([10, 7])\n",
-            "torch.Size([16, 7])\n",
-            "torch.Size([16, 7])\n",
-            "torch.Size([17, 7])\n",
-            "torch.Size([19, 7])\n",
-            "torch.Size([12, 7])\n",
-            "torch.Size([25, 7])\n",
-            "torch.Size([16, 7])\n",
-            "torch.Size([11, 7])\n",
-            "torch.Size([23, 7])\n",
-            "torch.Size([23, 7])\n",
-            "torch.Size([16, 7])\n",
-            "torch.Size([12, 7])\n",
-            "torch.Size([13, 7])\n",
-            "torch.Size([23, 7])\n",
-            "torch.Size([25, 7])\n",
-            "torch.Size([19, 7])\n",
-            "torch.Size([23, 7])\n",
-            "torch.Size([19, 7])\n",
-            "torch.Size([19, 7])\n",
-            "torch.Size([25, 7])\n",
-            "torch.Size([18, 7])\n",
-            "torch.Size([13, 7])\n",
-            "torch.Size([15, 7])\n",
-            "torch.Size([16, 7])\n"
-          ]
-        }
-      ],
-      "source": [
-        "for i in range(100):\n",
-        "  dx = mutag[i]\n",
-        "  #print(dx.edge_index.shape)\n",
-        "  print(dx.x.shape)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -412,7 +285,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -620,7 +493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "xyD_db5bAHOZ",
         "outputId": "6b72bebd-a944-45fa-e610-babff20687f1",
@@ -830,7 +703,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -858,50 +731,75 @@
         "id": "hDw0okj3AHOZ"
       },
       "source": [
-        "## Rewiring:"
+        "# Rewiring:"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Rewire1:\n",
+        "### - rewires all the adjacent nodes of the bridges"
+      ],
+      "metadata": {
+        "id": "9hqoxX8K67a4"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "def rewire(data):\n",
-        "  G = to_networkx(data, to_undirected = True)\n",
-        "  bridges = list(nx.bridges(G))\n",
+        "def rewire1(data): # this connects all the adjacent nodes of the bridges together(no triangular rewiring)\n",
+        "  g6 = to_networkx(data, to_undirected = True)\n",
+        "  bridges = list(nx.bridges(g6))\n",
         "\n",
         "  adj_node_dict = {}\n",
-        "  for i in bridges:\n",
-        "    for j in i:\n",
-        "      adj_nodes = list(nx.all_neighbors(G,j))\n",
-        "      adj_node_dict.update({j : adj_nodes})\n",
+        "# Get all neighbors for each bridge node\n",
+        "  for u, v in bridges:\n",
+        "      for node in (u, v):\n",
+        "          adj_nodes = list(nx.all_neighbors(g6, node))\n",
+        "          adj_node_dict[node] = adj_nodes\n",
         "\n",
-        "  keys = set(adj_node_dict.keys())\n",
+        "  adj_node_dict = {key: value for key, value in adj_node_dict.items() if len(value) > 1}\n",
         "\n",
-        "  for key, values in adj_node_dict.items():\n",
-        "    # Remove any bridge node found in the list\n",
-        "    adj_node_dict[key] = [v for v in values if v not in keys]\n",
+        "\n",
         "\n",
         "  for u, v in bridges:\n",
         "    neighbors_u = adj_node_dict.get(u,[])\n",
         "    neighbors_v = adj_node_dict.get(v,[])\n",
         "\n",
-        "  for node_u in neighbors_u:\n",
-        "    for node_v in neighbors_v:\n",
-        "      if not G.has_edge(node_u, node_v): # if the edge does not already exist\n",
-        "        G.add_edge(node_u, node_v) # add the edge\n",
-        "\n",
-        "  #Gx.remove_edge(u,v) # removing bridge node\n",
+        "    for node_u in neighbors_u:\n",
+        "      for node_v in neighbors_v:\n",
+        "        if not g6.has_edge(node_u, node_v): # if the edge does not already exist\n",
+        "          g6.add_edge(node_u, node_v) # add the edge\n",
         "\n",
         "  adj_matrix = nx.adjacency_matrix(G).toarray()\n",
-        "  # function should return the edge_index\n",
+        "    # # function should return the edge_index\n",
         "\n",
         "  edge_index = torch.tensor(adj_matrix, dtype=torch.long)\n",
         "\n",
         "  edge_index = edge_index.nonzero().t().contiguous() # (2,num_edges) format and contigous memory.\n",
         "\n",
-        "  return edge_index"
+        "  return edge_index\n",
+        "\n",
+        ""
       ],
       "metadata": {
         "id": "Pbtm_opgajqU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "edge_index1 = []\n",
+        "for i in range(len(mutag)):\n",
+        "  data = mutag[i]\n",
+        "  edge_index = rewire1(data)\n",
+        "  edge_index1.append(edge_index)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "nT4YW0E265NJ"
       },
       "execution_count": null,
       "outputs": []
