Rewire2: second wiring strategy

--- a/MUTAG_GraphSAGE.ipynb
+++ b/MUTAG_GraphSAGE.ipynb
@@ -779,8 +779,7 @@
         "  edge_index = edge_index.nonzero().t().contiguous() # (2,num_edges) format and contigous memory.\n",
         "\n",
         "  return edge_index\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "id": "Pbtm_opgajqU"
@@ -795,8 +794,7 @@
         "for i in range(len(mutag)):\n",
         "  data = mutag[i]\n",
         "  edge_index = rewire1(data)\n",
-        "  edge_index1.append(edge_index)\n",
-        ""
+        "  edge_index1.append(edge_index)\n"
       ],
       "metadata": {
         "id": "nT4YW0E265NJ"
@@ -811,6 +809,91 @@
       ],
       "metadata": {
         "id": "y--32QpYayil"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Rewire 2:\n",
+        "### Connecting the adjacent nodes to the other bridge node"
+      ],
+      "metadata": {
+        "id": "vhlP2kGxud5I"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def rewire2(data):\n",
+        "    g6 = to_networkx(data, to_undirected=True)\n",
+        "    bridges = list(nx.bridges(g6))\n",
+        "    adj_node_dict = {}\n",
+        "    print(bridges)\n",
+        "\n",
+        "    filtered_bridges = [bridge for bridge in bridges\n",
+        "                        if len(list(g6.neighbors(bridge[0]))) > 1 and\n",
+        "                        len(list(g6.neighbors(bridge[1]))) > 1]\n",
+        "    print(filtered_bridges)\n",
+        "\n",
+        "    # Get all neighbors for each bridge node\n",
+        "    for u, v in filtered_bridges:\n",
+        "        for node in (u, v):\n",
+        "            adj_nodes = list(nx.all_neighbors(g6, node))\n",
+        "            adj_node_dict[node] = adj_nodes\n",
+        "\n",
+        "    # Filter to only include nodes with more than one neighbor\n",
+        "    adj_node_dict = {key: value for key, value in adj_node_dict.items() if len(value) > 1}\n",
+        "    keys = set(adj_node_dict.keys())\n",
+        "\n",
+        "    for key, values in adj_node_dict.items():\n",
+        "      # Remove any bridge node found in the list\n",
+        "      adj_node_dict[key] = [v for v in values if v not in keys]\n",
+        "\n",
+        "    for u, v in filtered_bridges: # 17,18\n",
+        "        neighbors_u = adj_node_dict.get(u, []) # 18, 19\n",
+        "        neighbors_v = adj_node_dict.get(v, []) #\n",
+        "        print(f\"Bridge ({u}, {v}): Neighbors of {u}: {neighbors_u}, Neighbors of {v}: {neighbors_v}\")\n",
+        "        # Only connect each neighbor of u to v, without connecting neighbors to each other\n",
+        "        for node_u in neighbors_u:\n",
+        "            if node_u != v and not g6.has_edge(node_u, v):  # Ensure we only connect to v\n",
+        "\n",
+        "                g6.add_edge(node_u, v)\n",
+        "\n",
+        "        # Only connect each neighbor of v to u, without connecting neighbors to each other\n",
+        "        for node_v in neighbors_v:\n",
+        "            if node_v != u and not g6.has_edge(node_v, u):  # Ensure we only connect to u\n",
+        "                g6.add_edge(node_v, u)\n",
+        "\n",
+        "        adj_matrix = nx.adjacency_matrix(G).toarray()\n",
+        "        # function should return the edge_index\n",
+        "\n",
+        "        edge_index = torch.tensor(adj_matrix, dtype=torch.long)\n",
+        "\n",
+        "        edge_index = edge_index.nonzero().t().contiguous() # (2,num_edges) format and contigous memory.\n",
+        "\n",
+        "\n",
+        "\n",
+        "    return edge_index\n"
+      ],
+      "metadata": {
+        "id": "iIXmRJEyunwr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "edge_index2 = []\n",
+        "for i in range(len(mutag)):\n",
+        "  data = mutag[i]\n",
+        "  edge_index = rewire1(data)\n",
+        "  edge_index2.append(edge_index)"
+      ],
+      "metadata": {
+        "id": "mNaZ1bOnvBXs"
       },
       "execution_count": null,
       "outputs": []
