Rewire 3: combines rewire 1 and 2

--- a/MUTAG_GraphSAGE.ipynb
+++ b/MUTAG_GraphSAGE.ipynb
@@ -889,11 +889,99 @@
         "edge_index2 = []\n",
         "for i in range(len(mutag)):\n",
         "  data = mutag[i]\n",
-        "  edge_index = rewire1(data)\n",
+        "  edge_index = rewire2(data)\n",
         "  edge_index2.append(edge_index)"
       ],
       "metadata": {
         "id": "mNaZ1bOnvBXs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Rewire 3:\n",
+        "\n",
+        "### Combines rewire1 and rewire2"
+      ],
+      "metadata": {
+        "id": "4OjHqijyHmfo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def rewire_combined(data):\n",
+        "    g = to_networkx(data, to_undirected=True)\n",
+        "    g6 = g.copy()\n",
+        "\n",
+        "\n",
+        "    bridges = list(nx.bridges(g6))\n",
+        "    adj_node_dict = {}\n",
+        "\n",
+        "\n",
+        "    filtered_bridges = [bridge for bridge in bridges\n",
+        "                        if len(list(g6.neighbors(bridge[0]))) > 1 and\n",
+        "                        len(list(g6.neighbors(bridge[1]))) > 1]\n",
+        "\n",
+        "\n",
+        "    for u, v in filtered_bridges:\n",
+        "        for node in (u, v):\n",
+        "            adj_nodes = list(nx.all_neighbors(g6, node))\n",
+        "            adj_node_dict[node] = adj_nodes\n",
+        "\n",
+        "\n",
+        "    adj_node_dict = {key: [v for v in value if len(value) > 1 and v not in adj_node_dict]\n",
+        "                     for key, value in adj_node_dict.items()}\n",
+        "\n",
+        "\n",
+        "    for u, v in filtered_bridges:\n",
+        "        neighbors_u = adj_node_dict.get(u, [])\n",
+        "        neighbors_v = adj_node_dict.get(v, [])\n",
+        "\n",
+        "\n",
+        "        for node_u in neighbors_u:\n",
+        "            if node_u != v and not g6.has_edge(node_u, v):\n",
+        "                g6.add_edge(node_u, v)\n",
+        "        for node_v in neighbors_v:\n",
+        "            if node_v != u and not g6.has_edge(node_v, u):\n",
+        "                g6.add_edge(node_v, u)\n",
+        "\n",
+        "\n",
+        "        for node_u in neighbors_u:\n",
+        "            for node_v in neighbors_v:\n",
+        "                if node_u != node_v and not g6.has_edge(node_u, node_v):\n",
+        "                    g6.add_edge(node_u, node_v)\n",
+        "\n",
+        "        adj_matrix = nx.adjacency_matrix(G).toarray()\n",
+        "        # function should return the edge_index\n",
+        "\n",
+        "        edge_index = torch.tensor(adj_matrix, dtype=torch.long)\n",
+        "\n",
+        "        edge_index = edge_index.nonzero().t().contiguous() # (2,num_edges) format and contigous memory.\n",
+        "\n",
+        "\n",
+        "\n",
+        "    return edge_index\n"
+      ],
+      "metadata": {
+        "id": "kIV4d60wHrkX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "edge_index3 = []\n",
+        "for i in range(len(mutag)):\n",
+        "  data = mutag[i]\n",
+        "  edge_index = rewire_combined(data)\n",
+        "  edge_index3.append(edge_index)"
+      ],
+      "metadata": {
+        "id": "2tAzhYrXHx4x"
       },
       "execution_count": null,
       "outputs": []
